Add meta tags page description, keywords and linked stylesheet

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="UNIQUE-KICKS a shoe repainting and styling service">
+    <meta name="keywords" content="UNIQUE-KICKS, shoe repainting service, shoe styling service">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>UNIQUE-KICKS</title>
 </head>
 
 <body>
     <h1>Hello World</h1>
-</body>
+
 <header>
     <section>
         <a href="index.html"><img src="../Unique-kicks/assets/images/logoplaceholder.png" alt="Website Logo"></a>
@@ -25,4 +28,7 @@
     </section>
 </header>
 
+<h1>H1</h1>
+<p>paragraph</p>
+</body>
 </html>
