Add sections and footer placeholder

--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
         </nav>
     </section>
 </header>
-
-<h1>H1</h1>
-<p>paragraph</p>
+<section>
+    HOW DOES IT WORK?
+</section>
+<section>
+    CHECK OUT OUR GALLARY!
+</section>
+<footer>
+    Social links here
+</footer>
 </body>
 </html>
