--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <div>
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="#">GALLARY</a></li>
                     <li><a href="#">CONTACT</a></li>
                 </ul>
