Add relocate logo placeholder and add style for headings

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <header>
     <section>
-        <a href="index.html"><img src="../Unique-kicks/assets/images/logoplaceholder.png" alt="Website Logo"></a>
+        <div id="logo">
+        <a href="index.html"><img src="assets/images/logoplaceholder.png" alt="Website Logo"></a>
+        </div>
         <nav>
             <div>
                 <ul>
