Add style for logo

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             </div>
         </nav>
     </section>
+    <section>
+        <div id="hero-image"></div>
+    </section>
 </header>
 <section>
     HOW DOES IT WORK?
