Style navigation  links

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         </div>
         <nav>
             <div>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">GALLARY</a></li>
+                <ul id="menu">
                     <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">GALLARY</a></li>
+                    <li>
+                        <a href="index.html" class="active">HOME</a>
+                    </li>
                 </ul>
             </div>
         </nav>
