--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <div id="hero-image"></div>
     </section>
 </header>
+<div>
+    <h1>CUSTOMIZE SNEAKERS</h1>
+    <p>
+        Want to stand out?<br>
+        Why not spice up your sneackers and dress to impress?
+    </p>
+</div>
 <section>
     HOW DOES IT WORK?
 </section>
