Style hero-image

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         Want to stand out?<br>
         Why not spice up your sneackers and dress to impress?
     </p>
+    <a href="" class="">Customize Now!</a>
 </div>
 <section>
     HOW DOES IT WORK?
