Style logo and hero image size

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header>
     <section>
         <div id="logo">
-        <a href="index.html"><img src="assets/images/logoplaceholder.png" alt="Website Logo"></a>
+        <a href="index.html"><img width="200" height="200" src="assets/images/logoplaceholder.png" alt="Website Logo"></a>
         </div>
         <nav>
             <div>
@@ -31,7 +31,7 @@
         </nav>
     </section>
     <section>
-        <div id="hero-image"></div>
+        <div id="hero-image" class="overlay"></div>
     </section>
 </header>
 <div>
