Style text box h-

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="hero-image" class="overlay"></div>
     </section>
 </header>
-<div>
+<div class="text-box">
     <h1>CUSTOMIZE SNEAKERS</h1>
     <p>
         Want to stand out?<br>
