Add style middle section box

--- a/index.html
+++ b/index.html
@@ -13,43 +13,48 @@
 <body>
     <h1>Hello World</h1>
 
-<header>
-    <section>
-        <div id="logo">
-        <a href="index.html"><img width="200" height="200" src="assets/images/logoplaceholder.png" alt="Website Logo"></a>
-        </div>
-        <nav>
-            <div>
-                <ul id="menu">
-                    <li><a href="#">CONTACT</a></li>
-                    <li><a href="#">GALLARY</a></li>
-                    <li>
-                        <a href="index.html" class="active">HOME</a>
-                    </li>
-                </ul>
+    <header>
+        <section>
+            <div id="logo">
+
+                <a href="index.html"><img width="200" height="200" src="assets/images/logoplaceholder.png"
+                        alt="Website Logo"></a>
             </div>
-        </nav>
+            <nav>
+                <div>
+                    <ul id="menu">
+                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="#">GALLARY</a></li>
+                        <li>
+                            <a href="index.html" class="active">HOME</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </section>
+        <section>
+            <div id="hero-image" class="overlay"></div>
+        </section>
+    </header>
+    <div class="text-box">
+        <h1>CUSTOMIZE SNEAKERS</h1>
+        <p>
+            Want to stand out?<br>
+            Why not spice up your sneackers and dress to impress?
+        </p>
+        <a href="" class="">Customize Now!</a>
+    </div>
+    <section>
+        <div class="block-how">
+            <h3>HOW DOES IT WORK?</h3>
+        </div>
     </section>
     <section>
-        <div id="hero-image" class="overlay"></div>
+        CHECK OUT OUR GALLARY!
     </section>
-</header>
-<div class="text-box">
-    <h1>CUSTOMIZE SNEAKERS</h1>
-    <p>
-        Want to stand out?<br>
-        Why not spice up your sneackers and dress to impress?
-    </p>
-    <a href="" class="">Customize Now!</a>
-</div>
-<section>
-    HOW DOES IT WORK?
-</section>
-<section>
-    CHECK OUT OUR GALLARY!
-</section>
-<footer>
-    Social links here
-</footer>
+    <footer>
+        Social links here
+    </footer>
 </body>
+
 </html>
