Add how does it work section main structure

--- a/index.html
+++ b/index.html
@@ -44,11 +44,24 @@
         </p>
         <a href="" class="">Customize Now!</a>
     </div>
-    <section>
-        <div class="block-how">
-            <h3>HOW DOES IT WORK?</h3>
+    <section id="how-to">
+        <div>
+            <div class="block-how">
+                <h3>HOW DOES IT WORK?</h3>
+                <p>You send us a design you wnat on your shoes then you send the shoes you want to customize and we'll set you up with your new pair.</p>
+            </div>
+            <div id="right-about">
+                <div class="right-about-heading">
+                    <h2>It's simple</h2>
+                    <ul>Do this</ul>
+                    <ul>Then this</ul>
+                    <ul>And finaly this</ul>
+                </div>
+            </div>
         </div>
+        
     </section>
+
     <section>
         CHECK OUT OUR GALLARY!
     </section>
