Add right about section content and style

--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
             <div id="right-about">
                 <div class="right-about-heading">
                     <h2>It's simple</h2>
-                    <ul>Do this</ul>
-                    <ul>Then this</ul>
-                    <ul>And finaly this</ul>
+                    <hr>
+                    <br>
+                    <ul>Contact our E-mail</ul>
+                    <br>
+                    <ul>Add a request description</ul>
+                    <br>
+                    <ul>Upload your design or inspiration</ul>
                 </div>
             </div>
         </div>
