Add style right about and gallery section main structure

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div>
             <div class="block-how">
                 <h3>HOW DOES IT WORK?</h3>
+                <br>
                 <p>You send us a design you wnat on your shoes then you send the shoes you want to customize and we'll set you up with your new pair.</p>
             </div>
             <div id="right-about">
@@ -59,17 +60,29 @@
                     <br>
                     <ul>Add a request description</ul>
                     <br>
-                    <ul>Upload your design or inspiration</ul>
+                    <ul>Link your design or inspiration</ul>
                 </div>
             </div>
         </div>
         
     </section>
 
-    <section>
+    <section id="gallery-section">
         CHECK OUT OUR GALLARY!
+        <div class="wrapper">
+            <div class="gallery">
+                <div class="box"><img src="assets/images/placeholder_thumbnail_1.jpg" alt=""></div>
+                <div class="box"><img src="assets/images/placeholder_thumbnail_2.jpg" alt=""></div>
+                <div class="box"><img src="assets/images/placeholder_thumbnail_3.jpg" alt=""></div>
+                <div class="box"><img src="assets/images/placeholder_thumbnail_4.jpg" alt=""></div>
+                <div class="box">
+                    <h3>CHECK OUT OUR GALLERY!</h3>
+                    <a href="">Gallery</a>
+                </div>
+            </div>
+        </div>
     </section>
-    <footer>
+    <footer id="footer-section">
         Social links here
     </footer>
 </body>
