--- a/index.html
+++ b/index.html
@@ -82,9 +82,25 @@
             </div>
         </div>
     </section>
-    <footer id="footer-section">
-        Social links here
+    <footer>
+        <div class="footer-section-content">
+            <h3>Follow Us</h3>
+            <p>Click the links below to go to our social-media pages!</p>
+            <ul>
+                <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook-square"></i></a></li>
+                <li><a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></a></li>
+                <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube-square"></i></a></li>
+                <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram-square"></i></a></li>
+                
+            </ul>
+        </div>
     </footer>
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/0e85f08158.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
