--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="footer-section-content">
             <h3>Follow Us</h3>
             <p>Click the links below to go to our social-media pages!</p>
-            <ul class="">
+            <ul class="social-networks">
                 <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook-square"></i></a></li>
                 <li><a href="https://twitter.com" target="_blank" rel="noopener"
