Add structure for how does it work section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,39 @@
         
     </section>
 
+    <!-- how does it work? -->
+    <section>
+        <div class="how-work-wrapper">
+            <h1>How does it work?</h1>
+            <div class="how-work-steps">
+
+                <div class="send-request-design">
+                        <div class="steps-img">
+                            <img src="#" alt="blue_paintbrush">
+                        </div>
+                    <h3>Send</h3>
+                    <p>Send us an E-mail on our Contact page</p>
+                </div>
+                <div class="send-request-design">
+                    <div class="steps-img">
+                        <img src="#" alt="green_paintbrush">
+                    </div>
+                    <h3>Request</h3>
+                    <p>Give us a brief description of your request</p>
+                </div>
+                <div class="send-request-design">
+                    <div class="steps-img">
+                        <img src="#" alt="pink_paintbrush">
+                    </div>
+                    <h3>Design</h3>
+                    <p>Link your design, inspiration or let us surprise you</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- how does it work? -->
+
     <section id="gallery-section">
         CHECK OUT OUR GALLARY!
         <div class="wrapper">
