--- a/index.html
+++ b/index.html
@@ -75,24 +75,30 @@
 
                 <div class="send-request-design">
                         <div class="steps-img">
-                            <img src="#" alt="blue_paintbrush">
+                            <img src="assets/images/blue_small.png" alt="blue_paintbrush">
                         </div>
                     <h3>Send</h3>
+                    <br>
                     <p>Send us an E-mail on our Contact page</p>
+                    <br>
                 </div>
                 <div class="send-request-design">
                     <div class="steps-img">
-                        <img src="#" alt="green_paintbrush">
+                        <img src="assets/images/green_small.png" alt="green_paintbrush">
                     </div>
                     <h3>Request</h3>
+                    <br>
                     <p>Give us a brief description of your request</p>
+                    <br>
                 </div>
                 <div class="send-request-design">
                     <div class="steps-img">
-                        <img src="#" alt="pink_paintbrush">
+                        <img src="assets/images/pink_small.png" alt="pink_paintbrush">
                     </div>
                     <h3>Design</h3>
+                    <br>
                     <p>Link your design, inspiration or let us surprise you</p>
+                    <br>
                 </div>
 
             </div>
