--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
     </section>
     <!-- how does it work? -->
-
+  <!-- Gallery -->
     <section id="gallery-section">
         CHECK OUT OUR GALLARY!
         <div class="wrapper">
@@ -121,6 +121,18 @@
             </div>
         </div>
     </section>
+      <!-- how does it work? -->
+    <!-- check out our gallery -->
+    <section>
+        <br>
+        <h3 class="mini-gallery-h3">CHECK OUT OUR GALLERY <a href="#">HERE</a></h3>
+        <br>
+        <div class="gallery-wrapper">
+            
+        </div>
+    </section>
+    <!-- check out our gallery -->
+
     <footer>
         <div class="footer-section-content">
             <h3>Follow Us</h3>
