center check out gallery h3 text

--- a/index.html
+++ b/index.html
@@ -128,7 +128,12 @@
         <h3 class="mini-gallery-h3">CHECK OUT OUR GALLERY <a href="#">HERE</a></h3>
         <br>
         <div class="gallery-wrapper">
-            
+            <div class="gallery-images-box"><img src="assets/images/stock-photo-delhi-india-feb-a-female-designer-painting-a-shoe-besides-other-shoes-she-has-already-1758820598.jpg" alt="image1"></div>
+            <div class="gallery-images-box"><img src="assets/images/stock-photo-hand-made-painted-canvas-shoes-with-acrylic-paint-and-paintbrush-1136142212.jpg" alt="image2"></div>
+            <div class="gallery-images-box"><img src="assets/images/stock-photo-man-painting-on-sneaker-at-wooden-table-indoors-closeup-customized-shoes-2126906909.jpg" alt="image3"></div>
+            <div class="gallery-images-box"><img src="assets/images/stock-photo-canvas-sneakers-with-handpainted-flowers-vials-of-fabric-paint-and-brush-on-white-background-cute-1369971998.jpg" alt="image4"></div>
+            <div class="gallery-images-box"><img src="assets/images/stock-photo-sleman-yogyakarta-indonesia-december-the-art-of-handmade-painting-shoes-using-acrylic-1897723558.jpg" alt="image5"></div>
+            <div class="gallery-images-box"><img src="assets/images/stock-photo-girl-painting-slip-on-shoes-night-magic-stars-and-space-concept-wonderful-handmade-custom-1291512352.jpg" alt="image6"></div>
         </div>
     </section>
     <!-- check out our gallery -->
