Style gallery images and text

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </section>
       <!-- how does it work? -->
     <!-- check out our gallery -->
-    <section>
+    <section id="check-gallery">
         <br>
         <h3 class="mini-gallery-h3">CHECK OUT OUR GALLERY <a href="#">HERE</a></h3>
         <br>
