--- a/index.html
+++ b/index.html
@@ -44,33 +44,16 @@
         </p>
         <a href="" class="">Customize Now!</a>
     </div>
-    <section id="how-to">
-        <div>
-            <div class="block-how">
-                <h3>HOW DOES IT WORK?</h3>
-                <br>
-                <p>You send us a design you wnat on your shoes then you send the shoes you want to customize and we'll set you up with your new pair.</p>
-            </div>
-            <div id="right-about">
-                <div class="right-about-heading">
-                    <h2>It's simple</h2>
-                    <hr>
-                    <br>
-                    <ul>Contact our E-mail</ul>
-                    <br>
-                    <ul>Add a request description</ul>
-                    <br>
-                    <ul>Link your design or inspiration</ul>
-                </div>
-            </div>
-        </div>
-        
-    </section>
+
+
+    
 
     <!-- how does it work? -->
     <section>
         <div class="how-work-wrapper">
             <h1>How does it work?</h1>
+            <p>You send us a design you want on your shoes then you send the shoes you want to customize and we'll set you up with your new pair.</p>
+            <br>
             <div class="how-work-steps">
 
                 <div class="send-request-design">
@@ -105,22 +88,7 @@
         </div>
     </section>
     <!-- how does it work? -->
-  <!-- Gallery -->
-    <section id="gallery-section">
-        CHECK OUT OUR GALLARY!
-        <div class="wrapper">
-            <div class="gallery">
-                <div class="box"><img src="assets/images/placeholder_thumbnail_1.jpg" alt=""></div>
-                <div class="box"><img src="assets/images/placeholder_thumbnail_2.jpg" alt=""></div>
-                <div class="box"><img src="assets/images/placeholder_thumbnail_3.jpg" alt=""></div>
-                <div class="box"><img src="assets/images/placeholder_thumbnail_4.jpg" alt=""></div>
-                <div class="box">
-                    <h3>CHECK OUT OUR GALLERY!</h3>
-                    <a href="">Gallery</a>
-                </div>
-            </div>
-        </div>
-    </section>
+  
       <!-- how does it work? -->
     <!-- check out our gallery -->
     <section id="check-gallery">
