Add structure to about us section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Hello World</h1>
-
+    <!-- header -->
     <header>
         <section>
             <div id="logo">
@@ -44,7 +44,7 @@
         </p>
         <a href="" class="">Customize Now!</a>
     </div>
-
+    <!-- header -->
 
     
 
@@ -89,7 +89,7 @@
     </section>
     <!-- how does it work? -->
   
-      <!-- how does it work? -->
+    <!-- how does it work? -->
     <!-- check out our gallery -->
     <section id="check-gallery">
         <br>
@@ -106,6 +106,26 @@
     </section>
     <!-- check out our gallery -->
 
+    <!-- about us -->
+    <section id="about-us">
+        <div class="about-section">
+            <div class="inner-container">
+                <h1>About Us</h1>
+                <p class="about-text">
+                    UNIQUE-KICKS is an independent customizing service for footwear. As employees and artists, we strive to become better and better. And for you to be happier and happier with our art.  We use all kinds of paint and tools to achieve a style that fits you.
+              It all started as a fun idéa but turned into an even more fun job. Here, no shoe is the same and we hope we can make you a unique pair that is as unique as you.
+                </p>
+                <div class="about-skills">
+                    <span>Friendly Service</span>
+                    <span>Cool Designs</span>
+                    <span>Good Vibes</span>
+                </div>
+            </div>
+        </div>
+    </section> 
+    <!-- about us -->
+
+    <!-- footer -->
     <footer>
         <div class="footer-section-content">
             <h3>Follow Us</h3>
@@ -126,6 +146,7 @@
             <p>carltallman-uniquekicks 2022</p>
         </div>
     </footer>
+    <!-- footer -->
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/0e85f08158.js" crossorigin="anonymous"></script>
 </body>
