Add color overlay to hero image

--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
                 </div>
             </nav>
         </section>
-        <section>
-            <div id="hero-image" class="overlay"></div>
+        <section class="image-and-overlay">
+            <div id="hero-image">
+                <div class="overlay"></div>
+            </div>
+            
         </section>
+
     </header>
     <div class="text-box">
         <h1>CUSTOMIZE SNEAKERS</h1>
