--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
     <!-- header -->
     <header>
         <section>
@@ -44,7 +43,7 @@
         <h1>CUSTOMIZE SNEAKERS</h1>
         <p>
             Want to stand out?<br>
-            Why not spice up your sneackers and dress to impress?
+            Why not spice up your footwear and dress to impress?
         </p>
         <a href="" class="">Customize Now!</a>
     </div>
