Add header structure again

--- a/index.html
+++ b/index.html
@@ -50,7 +50,32 @@
     </header>
     <!-- header -->
 
-    
+     <!-- header retry-->
+        <header>
+            <section class="header">
+                <nav>
+                    <a href="index.html"><img src="assets/images/logoplaceholder.png" alt="site logo"></a>
+                    <div class="nav-links">
+                        <ul>
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">GALLARY</a></li>
+                            <li><a href="#">CONTACT</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </section>
+        </header>
+            <div class="text-box">
+                <h1>CUSTOMIZE SNEAKERS</h1>
+                <p>
+                    Want to stand out?<br />
+                    Why not spice up your footwear and dress to impress?
+                </p>
+                <a href="#" class="hero-btn">Customize Now!</a>
+            </div>
+
+
+    <!-- header retry-->
 
     <!-- how does it work? -->
     <section>
