--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <section class="header">
                 <nav>
-                    <a href="index.html"><img src="assets/images/logoplaceholder.png" alt="site logo"></a>
+                    <a href="index.html"><img src="assets/images/LOGO_UnKi_1.png" alt="site logo"></a>
                     <div class="nav-links">
                         <ul>
                             <li><a href="#">HOME</a></li>
@@ -83,8 +83,7 @@
     <!-- how does it work? -->
     <!-- check out our gallery -->
     <section id="check-gallery">
-        <br>
-        <h3 class="mini-gallery-h3">CHECK OUT OUR GALLERY <a href="#">HERE</a></h3>
+        <h3 class="mini-gallery-h3"><br>CHECK OUT OUR GALLERY <a href="#">HERE</a></h3>
         <br>
         <div class="gallery-wrapper">
             <div class="gallery-images-box"><img src="assets/images/stock-photo-delhi-india-feb-a-female-designer-painting-a-shoe-besides-other-shoes-she-has-already-1758820598.jpg" alt="image1"></div>
