Add icons to how does it work page

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <header>
             <section class="header">
                 <nav>
-                    <a href="index.html"><img src="assets/images/LOGO_UnKi_1.png" alt="site logo"></a>
+                    <a href="index.html"><img src="assets/images/LOGO_UnKi_1.png" alt="site_logo"></a>
                     <div class="nav-links">
                         <ul>
-                            <li><a href="#">HOME</a></li>
+                            <li><a href="index.html">HOME</a></li>
                             <li><a href="#">GALLARY</a></li>
                             <li><a href="#">CONTACT</a></li>
                         </ul>
@@ -42,9 +42,11 @@
     <!-- how does it work? -->
     <section>
         <div class="how-work-wrapper">
+            <div class="how-work-top-text">
             <h1>How does it work?</h1>
             <p>You send us a design you want on your shoes then you send the shoes you want to customize and we'll set you up with your new pair.</p>
             <br>
+            </div>
             <div class="how-work-steps">
 
                 <div class="send-request-design">
@@ -53,7 +55,10 @@
                         </div>
                     <h3>Send</h3>
                     <br>
-                    <p>Send us an E-mail on our Contact page</p>
+                    <p>Send us an E-mail on our Contact page 
+                        <br>
+                        <i class="fa-solid fa-paper-plane"></i>
+                    </p>
                     <br>
                 </div>
                 <div class="send-request-design">
@@ -62,7 +67,10 @@
                     </div>
                     <h3>Request</h3>
                     <br>
-                    <p>Give us a brief description of your request</p>
+                    <p>Give us a brief description of your request 
+                        <br>
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </p>
                     <br>
                 </div>
                 <div class="send-request-design">
@@ -71,7 +79,10 @@
                     </div>
                     <h3>Design</h3>
                     <br>
-                    <p>Link your design, inspiration or let us surprise you</p>
+                    <p>Link your design, inspiration or let us surprise you 
+                        <br>
+                        <i class="fa-solid fa-object-group"></i>
+                    </p>
                     <br>
                 </div>
 
@@ -83,7 +94,7 @@
     <!-- how does it work? -->
     <!-- check out our gallery -->
     <section id="check-gallery">
-        <h3 class="mini-gallery-h3"><br>CHECK OUT OUR GALLERY <a href="#">HERE</a></h3>
+        <h3 class="mini-gallery-h3"><br>CHECK OUT OUR GALLERY<a href="#" class="gallery-btn">HERE</a></h3>
         <br>
         <div class="gallery-wrapper">
             <div class="gallery-images-box"><img src="assets/images/stock-photo-delhi-india-feb-a-female-designer-painting-a-shoe-besides-other-shoes-she-has-already-1758820598.jpg" alt="image1"></div>
