Change send icon

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="how-work-wrapper">
             <div class="how-work-top-text">
             <h1>How does it work?</h1>
-            <p>You send us a design you want on your shoes then you send the shoes you want to customize and we'll set you up with your new pair.</p>
+            <p>You send us your shoe design request. We provide the design. Then you send the shoes you want to customize and we'll set you up with your customized pair.</p>
             <br>
             </div>
             <div class="how-work-steps">
@@ -57,7 +57,7 @@
                     <br>
                     <p>Send us an E-mail on our Contact page 
                         <br>
-                        <i class="fa-solid fa-paper-plane"></i>
+                        <i class="fa-solid fa-envelope-open-text"></i>
                     </p>
                     <br>
                 </div>
