Add core html elements to gallery page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="nav-links">
                         <ul>
                             <li><a href="index.html">HOME</a></li>
-                            <li><a href="#">GALLARY</a></li>
+                            <li><a href="gallery.html">GALLARY</a></li>
                             <li><a href="#">CONTACT</a></li>
                         </ul>
                     </div>
@@ -94,7 +94,7 @@
     <!-- how does it work? -->
     <!-- check out our gallery -->
     <section id="check-gallery">
-        <h3 class="mini-gallery-h3"><br>CHECK OUT OUR GALLERY<a href="#" class="gallery-btn">HERE</a></h3>
+        <h3 class="mini-gallery-h3"><br>CHECK OUT OUR GALLERY<a href="gallery.html" class="gallery-btn">HERE</a></h3>
         <br>
         <div class="gallery-wrapper">
             <div class="gallery-images-box"><img src="assets/images/stock-photo-delhi-india-feb-a-female-designer-painting-a-shoe-besides-other-shoes-she-has-already-1758820598.jpg" alt="image1"></div>
