--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <ul>
                             <li><a href="index.html">HOME</a></li>
                             <li><a href="gallery.html">GALLARY</a></li>
-                            <li><a href="#">CONTACT</a></li>
+                            <li><a href="contact.html">CONTACT</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -33,7 +33,7 @@
                     Want to stand out?<br />
                     Why not spice up your footwear and dress to impress?
                 </p>
-                <a href="#" class="hero-btn">Customize Now!</a>
+                <a href="contact.html" class="hero-btn">Customize Now!</a>
             </div>
 
 
