Add structure for contact page

--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,33 @@
     <!-- header retry-->
 
     <!-- contact page-->
+    <section>
+        <div class="contact-bg">
+            <div class="contact-container">
+                <h1>Ready to customize?</h1>
+                <p>On this page you will enter your contact information and
+                    describe what kind of design you want us to make for you.</p>
+                <div class="contact-content">
+                    <h2>Contact Info</h2>
+                    <br>
+                        <div>
+                    <h3>Name</h3>
+                        <form action="">
+                            <label for="fname"></label>
+                            <input id="fname" type="text">
+                        </form>
+                        </div>
+                    <h3>E-mail</h3>
+                        <div>
+                        <form action="">
+                            <label for="email"></label>
+                            <input id="email" type="text">
+                        </form>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- contact page-->
 
 
