--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
               It all started as a fun idéa but turned into an even more fun job. Here, no shoe is the same and we hope we can make you a unique pair that is as unique as you.
                 </p>
                 <div class="about-skills">
-                    <span>Friendly Service</span>
-                    <span>Cool Designs</span>
-                    <span>Good Vibes</span>
+                    <span><em> Friendly Service ,</em></span>
+                    <span><em> Cool Designs ,</em></span>
+                    <span><em> Good Vibes </em></span>
                 </div>
             </div>
         </div>
