--- a/contact.html
+++ b/contact.html
@@ -43,25 +43,53 @@
     <section>
         <div class="contact-bg">
             <div class="contact-container">
-                <h1>Ready to customize?</h1>
+                <h1>READY TO CUSTOMIZE?</h1>
                 <p>On this page you will enter your contact information and
                     describe what kind of design you want us to make for you.</p>
+                <p><em>Be sure to be as detailed as possible and feel free to link any designs you want us to get inspired by.
+                    <br>After your request is sent, we will will be in touch.</em></p>
                 <div class="contact-content">
-                    <h2>Contact Info</h2>
+                    <h2>CONTACT INFO</h2>
                     <br>
                         <div>
-                    <h3>Name</h3>
+                            
+                    <h3>First Name</h3>
                         <form action="">
                             <label for="fname"></label>
-                            <input id="fname" type="text">
+                            <input id="fname" type="text" name="fname" placeholder="First Name" required>
                         </form>
+                        </div>
+                        <div>
+                    <h3>Last Name</h3>
+                                <form action="">
+                                    <label for="lname"></label>
+                                    <input id="lname" type="text" name="lname" placeholder="Last Name" required>
+                                </form>
                         </div>
                     <h3>E-mail</h3>
                         <div>
                         <form action="">
                             <label for="email"></label>
-                            <input id="email" type="text">
+                            <input id="email" type="text" name="email" placeholder="E-mail" required>
                         </form>
+                        </div>
+                    <h3>Address</h3>
+                        <div>
+                            <form action="">
+                                <label for="Address"></label>
+                                <input id="address" type="text" name="address" placeholder="Address" required>
+                            </form>
+                        </div>
+                        <h3>Description</h3>
+                            <div>
+                                <form action="">
+                                    <label for=""></label>
+                                    <textarea name="your description" rows="12" cols="60"></textarea>
+                                </form>
+                            </div>
+                        <br>
+                        <div id="send-request">
+                            <input type="submit" value="Send Request">
                         </div>
                 </div>
             </div>
@@ -74,7 +102,7 @@
     <footer>
         <div class="footer-section-content">
             <h3>Follow Us</h3>
-            <p>Click the links below to go to our social-media pages!</p>
+            <p>Click the links</p>
             <ul class="social-networks">
                 <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook-square"></i></a></li>
@@ -88,7 +116,7 @@
             </ul>
         </div>
         <div class="footer-section-bottom">
-            <p>carltallman-uniquekicks 2022</p>
+            <p>carltallman  uniquekicks 2022</p>
         </div>
     </footer>
     <!-- footer -->
