--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <footer>
         <div class="footer-section-content">
             <h3>Follow Us</h3>
-            <p>Click the links below to go to our social-media pages!</p>
+            <p>Click the links</p>
             <ul class="social-networks">
                 <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook-square"></i></a></li>
@@ -144,7 +144,7 @@
             </ul>
         </div>
         <div class="footer-section-bottom">
-            <p>carltallman-uniquekicks 2022</p>
+            <p>carltallman  uniquekicks 2022</p>
         </div>
     </footer>
     <!-- footer -->
