Restyle hover nav bar for easier understanding

--- a/contact.html
+++ b/contact.html
@@ -88,8 +88,8 @@
                                 </form>
                             </div>
                         <br>
-                        <div id="send-request">
-                            <input type="submit" value="Send Request">
+                        <div>
+                            <input class="contact-send-request" type="submit" value="Send Request">
                         </div>
                 </div>
             </div>
