Add simple box structure for how does it work section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
 
     <!-- header retry-->
 
+<!-- how does it work retry-->
+
+<section class="how-does-work-bg">
+    <div class="how-does-work-container">
+        <div class="how-does-work-h2-and-boxes">
+            <h2>How does it work?</h2>
+            <div class="how-does-work-boxes">
+                <div class="box-steps">
+                        <h3>box 1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur impedit quis quo voluptate a dignissimos, eos molestiae in sunt quod cumque? Non quo cum natus eum delectus magnam inventore facere.
+                        </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- how does it work retry-->
+
     <!-- how does it work? -->
     <section>
         <div class="how-work-wrapper">
