Style text and simple boxes with icons for how does it work section

--- a/index.html
+++ b/index.html
@@ -45,12 +45,45 @@
     <div class="how-does-work-container">
         <div class="how-does-work-h2-and-boxes">
             <h2>How does it work?</h2>
+            <p>You send us your shoe design request. We provide the design. Then you send the shoes you want to customize and we'll set you up with your customized pair.</p>
+            <br>
             <div class="how-does-work-boxes">
                 <div class="box-steps">
-                        <h3>box 1</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur impedit quis quo voluptate a dignissimos, eos molestiae in sunt quod cumque? Non quo cum natus eum delectus magnam inventore facere.
+                        <h3>Send</h3>
+                        <br>
+                       <p>
+                        Send us an E-mail on our Contact page
                         </p>
+                        <br>
+                        <i class="fa-solid fa-envelope-open-text"></i>
                 </div>
+                <div class="box-steps">
+                    <h3>Request</h3>
+                    <br>
+                   <p>
+                    Give us a brief description of your request   
+                    </p>
+                    <br>
+                    <i class="fa-solid fa-pen-to-square"></i>
+            </div>
+            <div class="box-steps">
+                <h3>Design</h3>
+                <br>
+               <p>
+                Link your design, inspiration or let us surprise you        
+                </p>
+                <br>
+                <i class="fa-solid fa-object-group"></i>
+            </div>
+            <div class="box-steps">
+                <h3>Wait</h3>
+                <br>
+               <p>
+                Now just wait for your shoes to arrive         
+                </p>
+                <br>
+                <i class="fa-solid fa-hourglass"></i>
+            </div>
             </div>
         </div>
     </div>
@@ -69,9 +102,6 @@
             <div class="how-work-steps">
 
                 <div class="send-request-design">
-                        <div class="steps-img">
-                            <img src="assets/images/blue_small.png" alt="blue_paintbrush">
-                        </div>
                     <h3>Send</h3>
                     <br>
                     <p>Send us an E-mail on our Contact page 
@@ -81,9 +111,6 @@
                     <br>
                 </div>
                 <div class="send-request-design">
-                    <div class="steps-img">
-                        <img src="assets/images/green_small.png" alt="green_paintbrush">
-                    </div>
                     <h3>Request</h3>
                     <br>
                     <p>Give us a brief description of your request 
@@ -93,9 +120,6 @@
                     <br>
                 </div>
                 <div class="send-request-design">
-                    <div class="steps-img">
-                        <img src="assets/images/pink_small.png" alt="pink_paintbrush">
-                    </div>
                     <h3>Design</h3>
                     <br>
                     <p>Link your design, inspiration or let us surprise you 
