Style main page for better experience

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                         <div>
                             
                     <h3>First Name</h3>
-                        <form action="">
+                        <form method="POST" action="#">
                             <label for="fname"></label>
                             <input id="fname" type="text" name="fname" placeholder="First Name" required>
                         </form>
@@ -75,7 +75,7 @@
                         </div>
                     <h3>Address</h3>
                         <div>
-                            <form action="">
+                            <form action="#">
                                 <label for="Address"></label>
                                 <input id="address" type="text" name="address" placeholder="Address" required>
                             </form>
