--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                             </form>
                         </div>
                         <h3>Description</h3>
-                            <div>
+                            <div class="your-description">
                                 <form action="">
                                     <label for=""></label>
                                     <textarea name="your description" rows="12" cols="60"></textarea>
