Add successfully add form dump to contact info

--- a/contact.html
+++ b/contact.html
@@ -51,49 +51,30 @@
                 <div class="contact-content">
                     <h2>CONTACT INFO</h2>
                     <br>
-                        <div>
-                            
+                    <form method="POST" action="https://formdump.codeinstitute.net/"> 
                     <h3>First Name</h3>
-                        <form method="POST" action="#">
                             <label for="fname"></label>
                             <input id="fname" type="text" name="fname" placeholder="First Name" required>
-                        </form>
-                        </div>
-                        <div>
                     <h3>Last Name</h3>
-                                <form action="">
-                                    <label for="lname"></label>
-                                    <input id="lname" type="text" name="lname" placeholder="Last Name" required>
-                                </form>
-                        </div>
+                            <label for="lname"></label>
+                            <input id="lname" type="text" name="lname" placeholder="Last Name" required>
                     <h3>E-mail</h3>
-                        <div>
-                        <form action="">
                             <label for="email"></label>
                             <input id="email" type="text" name="email" placeholder="E-mail" required>
-                        </form>
-                        </div>
                     <h3>Address</h3>
-                        <div>
-                            <form action="#">
                                 <label for="Address"></label>
                                 <input id="address" type="text" name="address" placeholder="Address" required>
-                            </form>
-                        </div>
                         <h3>Description</h3>
                             <div class="your-description">
-                                <form action="">
-                                    <label for=""></label>
-                                    <textarea name="your description" rows="12" cols="60"></textarea>
-                                </form>
+                                    <label for="Description"></label>
+                                    <textarea name="your description" rows="12" cols="60" required></textarea>
                             </div>
                         <br>
-                        <div>
                             <input class="contact-send-request" type="submit" value="Send Request">
-                        </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
     <!-- contact page-->
 
