image alt descriptions

--- a/gallery.html
+++ b/gallery.html
@@ -42,18 +42,18 @@
     <!--main gallery-->
     <section id="gallery-page">
         <div id="photos">
-            <img src="assets/images/main_gallery/grailify-CjxIizJXiao-unsplash.jpg" alt="">
-            <img src="assets/images/main_gallery/grailify-lQ5lbZmmlrI-unsplash.jpg" alt="">
-            <img src="assets/images/Shutterstock/shutterstock_1136142212.jpg" alt="">
-            <img src="assets/images/Shutterstock/shutterstock_1369972481.jpg" alt="">
-            <img src="assets/images/main_gallery/tavis-beck-11kzesJnoBY-unsplash.jpg" alt="">
+            <img src="assets/images/main_gallery/grailify-CjxIizJXiao-unsplash.jpg" alt="white sneaker with splash design stepping out of car">
+            <img src="assets/images/main_gallery/grailify-lQ5lbZmmlrI-unsplash.jpg" alt="three pairs of nike shoes with painted designs">
+            <img src="assets/images/Shutterstock/shutterstock_1136142212.jpg" alt="close up painting black shoe">
+            <img src="assets/images/Shutterstock/shutterstock_1369972481.jpg" alt="styled shoe next to paint and brush">
+            <img src="assets/images/main_gallery/tavis-beck-11kzesJnoBY-unsplash.jpg" alt="neon purple and light green painted shoes">
 
-            <img src="assets/images/Shutterstock/shutterstock_1369971998.jpg" alt="">
-            <img src="assets/images/Shutterstock/shutterstock_1758820598.jpg" alt="">
-            <img src="assets/images/Shutterstock/shutterstock_1291512352.jpg" alt="">
-            <img src="assets/images/Shutterstock/shutterstock_1133964863.jpg" alt="">
-            <img src="assets/images/Shutterstock/shutterstock_2126906909.jpg" alt="">
-            <img src="assets/images/Shutterstock/shutterstock_1897723558.jpg" alt="">
+            <img src="assets/images/Shutterstock/shutterstock_1369971998.jpg" alt="styled converse-style shoe next to paint and brush">
+            <img src="assets/images/Shutterstock/shutterstock_1758820598.jpg" alt="woman painting white sneakers">
+            <img src="assets/images/Shutterstock/shutterstock_1291512352.jpg" alt="woman painting design on the side of white sneaker">
+            <img src="assets/images/Shutterstock/shutterstock_1133964863.jpg" alt="close up painting black shoe in front of desk">
+            <img src="assets/images/Shutterstock/shutterstock_2126906909.jpg" alt="man painting yellow shoes">
+            <img src="assets/images/Shutterstock/shutterstock_1897723558.jpg" alt="brush painting letter design on red and blue sneakers">
         </div>
     </section>
     
