--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <h3>Send</h3>
                         <br>
                        <p>
-                        Send us an E-mail on our Contact page
+                        Start by sending us an E-mail on our Contact page
                         </p>
                         <br>
                         <i class="fa-solid fa-envelope-open-text"></i>
@@ -61,7 +61,7 @@
                     <h3>Request</h3>
                     <br>
                    <p>
-                    Give us a brief description of your request   
+                    Give us a brief description of your request
                     </p>
                     <br>
                     <i class="fa-solid fa-pen-to-square"></i>
@@ -70,7 +70,7 @@
                 <h3>Design</h3>
                 <br>
                <p>
-                Link your design, inspiration or let us surprise you        
+                Link your design or inspiration and send us your pair 
                 </p>
                 <br>
                 <i class="fa-solid fa-object-group"></i>
@@ -79,9 +79,8 @@
                 <h3>Wait</h3>
                 <br>
                <p>
-                Now just wait for your shoes to arrive         
+                Wait for your shoes to arrive when they're styled
                 </p>
-                <br>
                 <i class="fa-solid fa-hourglass"></i>
             </div>
             </div>
@@ -97,10 +96,10 @@
         <h3 class="mini-gallery-h3"><br>CHECK OUT OUR GALLERY<a href="gallery.html" class="gallery-btn">HERE</a></h3>
         <br>
         <div class="gallery-wrapper">
-            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1758820598.jpg" alt="image1"></div>
-            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1136142212.jpg" alt="image2"></div>
-            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_2126906909.jpg" alt="image3"></div>
-            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1369971998.jpg" alt="image4"></div>
+            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1758820598.jpg" alt="woman painting white sneakers"></div>
+            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1136142212.jpg" alt="close up painting black shoe"></div>
+            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_2126906909.jpg" alt="man painting yellow shoes"></div>
+            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1369971998.jpg" alt="styled converse-style shoe next to paint and brush"></div>
         </div>
     </section>
     <!-- check out our gallery -->
