--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 <p><em>Be sure to be as detailed as possible and feel free to link any designs you want us to get inspired by.
                     <br>After your request is sent, we will will be in touch.</em></p>
                 <div class="contact-content">
-                    <h2>CONTACT INFO</h2>
+                    <h2>CONTACT INFO:</h2>
                     <br>
                     <form method="POST" action="https://formdump.codeinstitute.net/"> 
                     <h3>First Name</h3>
